--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44.2"
     kapt "com.google.dagger:hilt-compiler:2.44.2"
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
 
     //Test
     testImplementation 'junit:junit:4.13.2'
