--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    //Paging 3
+    implementation "androidx.paging:paging-runtime:3.1.1"
+
+    //View Model Lifecycle Aware Coroutine
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
     //Test
     testImplementation 'junit:junit:4.13.2'
