Added Activity code and complete functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -57,6 +60,7 @@ dependencies {
 
     //View Model Lifecycle Aware Coroutine
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation "androidx.activity:activity-ktx:1.7.1"
 
     //Test
     testImplementation 'junit:junit:4.13.2'
