Added Test Cases dependancy and Test Cases

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,17 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation "androidx.activity:activity-ktx:1.7.1"
 
-    //Test
+    //Test Cases
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.paging:paging-runtime:3.1.1"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    testImplementation "org.mockito:mockito-core:5.2.0"
+}
+
+kapt {
+    correctErrorTypes true
 }
